using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    #region TAG
    public const string CHARACTER_TAG = "Character";

    #endregion

    #region ANIM_NAME
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_RUN = "Run";
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_DEAD = "Dead";
    public const string ANIM_WIN = "Win";
    public const string ANIM_DANCE = "Dance";
    public const string ANIM_ULTI = "Ulti";

    #endregion
}
